<resources>
    <string name="ff_regular">sans-serif</string>
    <string name="ff_medium">sans-serif-medium</string>

    <string name="app_name">Шмакова Анастасия</string>
    <string name="phone">Мобильный</string>
    <string name="e_mail">E-mail</string>
    <string name="vk">Профиль в VK</string>
    <string name="github">Репозиторий</string>
    <string name="bio">О себе</string>
    <string name="projects">Проектов</string>
    <string name="loc">Написано строк кода</string>
    <string name="rating">Рейтинг</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile.dialog.gallery">Загрузить из галереи</string>
    <string name="user_profile.dialog.camera">Сделать снимок</string>
    <string name="user_profile.dialog.cancel">Отмена</string>
    <string name="user_profile.dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile_chose_message">Выберите файл</string>
    <string name="user_profile.error.phone">Некорректный телефон</string>
    <string name="user_profile.error.email">Некорректный e-mail</string>
    <string name="user_profile.error.link">Некорректная ссылка</string>

    <!-- AuthActivity -->
    <string name="auth.authorization_enter">Войти</string>
    <string name="auth.email">Введите e-mail</string>
    <string name="auth.password">Введите пароль</string>
    <string name="auth.login">Войти</string>
    <string name="auth.remember">Забыли пароль?</string>
    <string name="more_info">Просмотр</string>
</resources>
