<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior=".ui.behaviors.CustomNestedScrollBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout style="@style/item">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_call_black_24dp" />

                <LinearLayout style="@style/edit_text_wrapper">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/phone_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/phone_et"
                            style="@style/edit_text"
                            android:inputType="phone"
                            android:hint="@string/phone"
                            android:maxLength="20"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/call_img"
                    style="@style/icon.right"
                    android:src="@drawable/ic_phone_in_talk_black_24dp" />
            </LinearLayout>

            <View style="@style/line"></View>

            <LinearLayout style="@style/item">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_email_black_24dp" />

                <LinearLayout style="@style/edit_text_wrapper">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/email_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/email_et"
                            style="@style/edit_text"
                            android:inputType="textEmailAddress"
                            android:hint="@string/e_mail"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/send_email_img"
                    style="@style/icon.right"
                    android:src="@drawable/ic_send_black_24dp" />
            </LinearLayout>

            <View style="@style/line"></View>

            <LinearLayout style="@style/item">

                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_vk_circle" />

                <LinearLayout style="@style/edit_text_wrapper">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/vk_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/vk_et"
                            style="@style/edit_text"
                            android:hint="@string/vk"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/vk_img"
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp" />
            </LinearLayout>

            <View style="@style/line"></View>

            <LinearLayout style="@style/item">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_github_circle" />

                <LinearLayout style="@style/edit_text_wrapper">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/github_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/github_et"
                            style="@style/edit_text"
                            android:hint="@string/github"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/github_img"
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp" />
            </LinearLayout>

            <View style="@style/line"></View>

            <LinearLayout style="@style/item">
                <ImageView
                    style="@style/icon.left"
                    android:src="@drawable/ic_account_circle" />

                <LinearLayout style="@style/edit_text_wrapper">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/bio_et"
                            style="@style/edit_text"
                            android:hint="@string/bio"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp" />
            </LinearLayout>

            <View style="@style/line"></View>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>